k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/haythem-abdellaoui/proxmox-homelab-infrastructure-frontend:dc43ebf91f7ce74bf4b6989af5ab8d4496b86c8d
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "15Mi"
              cpu: "10m"
            limits:
              memory: "30Mi"
              cpu: "100m"
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-config
