k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/haythem-abdellaoui/proxmox-homelab-infrastructure-backend:524093c2754bee4531d2832d0cfbb4af1a49af8a
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: "80Mi"
              cpu: "50m"
            limits:
              memory: "150Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
